--- a/BadgeCenterDemo/BadgeCenterDemo/BCBadgeDefinitions.plist
+++ b/BadgeCenterDemo/BadgeCenterDemo/BCBadgeDefinitions.plist
@@ -3,6 +3,6 @@
 <plist version="1.0">
 <dict>
 	<key>background</key>
-	<string>leather-1.jpg</string>
+	<string>metal-2.jpg</string>
 </dict>
 </plist>
